internal/gatewayapi/testdata/securitypolicy-with-extauth-backend.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - www.foo.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /foo1
          backendRefs:
            - name: service-1
              port: 8080
        - matches:
            - path:
                value: /foo2
          backendRefs:
            - name: service-2
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
    spec:
      hostnames:
        - www.bar.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /bar
          backendRefs:
            - name: service-3
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-3
    spec:
      hostnames:
        - www.baz.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /baz
          backendRefs:
            - name: service-4
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-4
    spec:
      hostnames:
        - www.qux.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /qux
          backendRefs:
            - name: service-5
              port: 8080
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-fqdn
      namespace: default
    spec:
      endpoints:
        - fqdn:
            hostname: 'primary.foo.com'
            port: 3000
      tls:
        caCertificateRefs:
          - name: ca-bundle
            group: ''
            kind: Secret
        clientCertificateRef:
          name: authz-tls
          group: ''
          kind: Secret
        sni: primary.foo.com
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-uds
      namespace: default
    spec:
      endpoints:
        - unix:
            path: '/var/run/uds.sock'
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      namespace: envoy-gateway
      name: referencegrant-1
    spec:
      from:
        - group: gateway.envoyproxy.io
          kind: SecurityPolicy
          namespace: default
      to:
        - group: ""
          kind: Service
securityPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: SecurityPolicy
    metadata:
      namespace: default
      name: policy-for-http-route-1
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-1
      extAuth:
        failOpen: true
        statusOnError: 500
        headersToExtAuth:
          - header1
          - header2
        grpc:
          backendRefs:
            - name: backend-fqdn
              kind: Backend
              group: gateway.envoyproxy.io
              port: 3000
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: SecurityPolicy
    metadata:
      namespace: default
      name: policy-for-http-route-3--grpc-backendref
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-3
      extAuth:
        failOpen: true
        headersToExtAuth:
          - header3
          - header4
        grpc:
          backendRef:
            name: service-2
            kind: Service
            port: 8080
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: SecurityPolicy
    metadata:
      namespace: default
      name: policy-for-http-route-3-http-backendref
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-4
      extAuth:
        http:
          backendRef:
            name: backend-uds
            kind: Backend
            group: gateway.envoyproxy.io
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      name: ca-bundle
      namespace: default
    data:
      ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp5eXIreHhXdHlpdm [...]
  - apiVersion: v1
    kind: Secret
    metadata:
      name: authz-tls
      namespace: default
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLRENDQWhDZ0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF4TUlWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUURFd2hVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT1kySnVYMDJHMGplSjdBOURGbGQrclRtNGE3THJKWjYxTWJLUlVQMzVuVnl4LzAKdEFZKzJoVURUZVBpeG9ZWVU2VzVMS1NBR3Z0MnlubWtpd0RBWm9KZVBYYTNxbW14c2d5RnZrZU5tZ2oyS0lLRQpSYW9YY1R6emNzT [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRG1OaWJsOU5odEkzaWUKd1BReFpYZnEwNXVHdXk2eVdldFRHeWtWRDkrWjFjc2Y5TFFHUHRvVkEwM2o0c2FHR0ZPbHVTeWtnQnI3ZHNwNQpwSXNBd0dhQ1hqMTJ0NnBwc2JJTWhiNUhqWm9JOWlpQ2hFV3FGM0U4ODNMRHA3UkVkdHJISjdCeVNLbFVrN1JSCnhRV3pYL0lJaGJ2TTJIVzJWdDBQS0RuZ05CZ0p6Q0R3c1kxOVMyN1RwcG0vcldtRHhnM1JGYStKYkJ2TUx0elcKNXVVZVFQVUVxaFBnNDd4dUQ0Ny9nWER6c0lIbTZhU2d6d2dMcTA4VWY5UUI5OWk1bzB2SDVSSXdidnpxSWxpTQpLQlJmcHRlUlRUZ [...]
